<resources>
    <string name="app_name">Kotlin Learner Enrollment</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_register">REGISTER</string>
    <string name="prompt_name">Enter Username</string>
    <string name="prompt_email">Enter Email Address</string>
    <string name="action_sign_in_short">SIGN IN</string>
    <string name="prompt_password">Enter Password</string>
    <string name="home">HOME DASHBOARD</string>
    <string name="prompt_fullname">Enter Full name</string>
    <string name="prompt_address">Enter Address</string>
    <string name="backButton">Back</string>
    <string name="List_of_Users_text">List of Users</string>
</resources>